--- a/boot-demo/pom.xml
+++ b/boot-demo/pom.xml
@@ -33,8 +33,8 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.24</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/libs/lombok-1.18.24.jar</systemPath>
+<!--			<scope>system</scope>-->
+<!--			<systemPath>${basedir}/libs/lombok-1.18.24.jar</systemPath>-->
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -42,6 +42,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+		</dependency>
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.springframework.boot/spring-boot &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot</artifactId>-->
+<!--			<version>2.7.4</version>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
