--- a/boot-demo/src/main/resources/application.properties
+++ b/boot-demo/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#enable ansi output
+spring.output.ansi.enabled = always
 
+# spring MVC
+spring.mvc.view.prefix = /WEB-INF/wiew/
+spring.mvc.view.suffix = .jsp
