--- a/guess-the-number-game/core/pom.xml
+++ b/guess-the-number-game/core/pom.xml
@@ -15,15 +15,17 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <version>1.4.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>5.3.23</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.32</version>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
@@ -32,8 +34,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>system</scope>
-            <systemPath>${basedir}/../libs/lombok-1.18.24.jar</systemPath>
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${basedir}/../libs/lombok-1.18.24.jar</systemPath>-->
             <!-- scope tells configuration using jar from system -->
         </dependency>
 
